tests/error_002.ts.out
Error: exception from mod1
    at Object.throwsError (file://[WILDCARD]deno/tests/subdir/mod1.ts:16:9)
    at foo (file://[WILDCARD]deno/tests/error_002.ts:4:3)
    at ModuleMetaData.eval [as factory ] (file://[WILDCARD]deno/tests/error_002.ts:7:1)
    at DenoCompiler._drainRunQueue (deno/js/compiler.ts:[WILDCARD])
    at DenoCompiler.run (deno/js/compiler.ts:[WILDCARD])
    at denoMain (deno/js/main.ts:[WILDCARD])
    at deno_main.js:1:1
